--- a/index.html
+++ b/index.html
@@ -204,10 +204,27 @@
     }
     @media (max-width: 600px) {
       .title { font-size: 1.15rem; }
-      .card-grid { gap: 8px; }
-      .card img { height: 66px; }
-      .card-label { font-size: 0.93rem; }
-      .container { border-radius: 0; }
+      .card-grid {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 6px;
+        padding: 0 4px;
+      }
+      .card {
+        min-width: 0;
+        width: 100%;
+        min-height: 110px;
+        max-width: 100%;
+        margin: 0;
+      }
+      .card img {
+        height: 70px;
+        border-radius: 12px 12px 0 0;
+      }
+      .card-label {
+        font-size: 0.92rem;
+        margin: 7px 0 8px 0;
+      }
+      .container { border-radius: 0; padding: 8px 0 0 0; }
     }
   </style>
 </head>
